test/compiler/fail/_if_cond.ods
do if 42 then true else false
